--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,8 @@ button {
   transform: translate(-50%, -50%) scale(1);
   width: 408px;
   height: 576px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  visibility 250ms ease-in-out;
   background: #fcfcfc;
 }
 .backdrop.is-hidden .modal {
@@ -87,7 +88,7 @@ button {
 .button-closed:hover,
 .button-closed:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .modal-button {
@@ -171,7 +172,7 @@ button {
 .img-portfolio {
   display: block;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-  transition: transform, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .img-portfolio:hover .hidden-div::before {
@@ -348,7 +349,7 @@ rgba(46, 47, 66, 0.7)),
   height: 88px;
   border: 1px solid var(--logo-company);
   border-radius: 4px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms,fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo-company {
   width: 104px;
@@ -397,7 +398,7 @@ rgba(46, 47, 66, 0.7)),
   text-align: center;
 }
 .footer-pages {
-  display: flex;
+  text-align: start;
   color: var(--brand-color);
   font-weight: 500;
   font-size: 16px;
@@ -465,31 +466,33 @@ rgba(46, 47, 66, 0.7)),
 .studio-web-portfolio-hidden::after {
   content: "";
   position: absolute;
+  display: block;
   bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
-  display: none;
   border-radius: 2px;
-  background: var(--interactive-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--brand-color);
 }
 .studio-web-portfolio-hidden:hover::after {
-  display: block;
+  background-color:var(--interactive-color);
 }
 
 .studio-web-contacts-hidden::after {
   content: "";
   position: absolute;
+  display: block;
   bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
-  display: none;
   border-radius: 2px;
-  background: var(--interactive-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--brand-color);
 }
 .studio-web-contacts-hidden:hover::after {
-  display: block;
+  background-color:var(--interactive-color);
 }
 
 .menu-link-webstudio {
@@ -566,34 +569,36 @@ header {
   background: var(--interactive-color);
 }
 
-.portfolio-contacts::after {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  display: none;
-  border-radius: 2px;
-  background: var(--interactive-color);
-}
-.portfolio-contacts:hover::after {
-  display: block;
-}
-
 .portfolio-hidden::after {
   content: "";
   position: absolute;
-  bottom: -1px;
+  display: block;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 4px;
-  display: none;
   border-radius: 2px;
-  background: var(--interactive-color);
+  background-color: var(--brand-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-hidden:hover::after {
+  background-color:var(--interactive-color);
+}
+
+.portfolio-contacts::after {
+  content: "";
+  position: absolute;
   display: block;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--brand-color);
+}
+.portfolio-contacts:hover::after {
+  background-color:var(--interactive-color);
 }
 
 .clik-portfolio {
@@ -656,7 +661,7 @@ header {
   color: var(--brand-color);
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition: color, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover,
 .button:focus {
@@ -780,8 +785,7 @@ header {
   color: var(--interactive-color);
   border-color: var(--color-logo);
   border: 1px solid #e7e9fc;
-  transition: color, background-color, box-shadow,
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .all-buttons:hover,
 .all-buttons:focus {
